app/styles/globals.css
:root {
  font-mono: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";

  --heading-color: rgba(39, 44, 41, 1);
  --content-color: #25282A;
  --background-color1: #E0E0E0;
  --background-color2: #ffffff;
  --superhighlight: #00AF66;
  --normalhighlight: #002710;
}

[data-theme="dark"] {
  --heading-color: #FFFFFF;
  --content-color: #ACB9B2;
  --background-color1: rgba(39, 44, 41, 1);
  --background-color2: rgba(53, 69, 59, 1);
  --superhighlight: #7DBD99;
  --normalhighlight: #4C7C61;
}

main {
  color: var(--content-color);
  background-color: var(--background-color1);
  background: linear-gradient(90deg, var(--background-color1) 22%, var(--background-color2) 100%);
}

h1,
h2,
h3,
h4,
h5 {
  color: var(--heading-color);
}

a {
  position: relative;
  color: var(--superhighlight);
  text-decoration: none;
  transition: all .25s ease;
}

a:hover {
  color: var(--normalhighlight);
}

a::before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: var(--normalhighlight);
  transform: scaleX(0);
  transition: transform 0.3s ease;
}

a:hover::before {
  transform: scaleX(1);
}

.particles {
  position: fixed;
  width: 100%;
}

